fix contrast

--- a/styles/site.css
+++ b/styles/site.css
@@ -345,6 +345,16 @@ a:link {
 	justify-content: space-evenly;
 }
 
+/*
+img.gallery,
+.gallery img {
+	padding: 4px;
+	border: 1px solid var(--mid-blue);
+	border-radius: 4px;
+}*/
+
+
+
 .caption {
 	text-align: center; 
 	font-size: var(--font-size-x-small);
